source/scss/default.scss
/* Sass imports */

@import 'reset';
@import 'external';
@import 'variables';

/* Universal styles */

body {
  @extend .font-default;
  background-color: $black;
}

a, a:active, a:visited {
  text-decoration: none;
  color: $primary-color;
  transition: color 0.2s linear;
}

a:hover {
  cursor: pointer;
  color: lighten($primary-color, 10%);
  transition: color 0s;
}

::selection {
  background: lighten($primary-color-light, 20%);
}

/* Layout styles */

section {
  min-height: 82vh;
  padding: 18vh 10vw 10vh 10vw;
  background-position: center center;
  background-size: cover;

  &.landing {
    height: 78vh;
    padding: 22vh 10vw 0 10vw;
    background-image: url('../images/backgrounds/turntable.jpg');
  }

  &.about-me {
    background-image: url('../images/backgrounds/tiger.jpg');

    p {
      font-size: 4.5vw;
    }
  }

  &.skills {
    background-image: url('../images/backgrounds/code.jpg');
  }

  &.projects {
    background-image: url('../images/backgrounds/fans.jpg');
  }
}

.links {
  padding-top: 8vh;
  font-size: 4.62vw;

  .link + .link {
    padding-left: 4vw;
  }

  .link {
    i {
      padding-right: 0.5vw;
    }

    small {
      font-size: 3vw;
    }
  }
}

.project {
  h1 {
    text-transform: none;
  }

  .links {
    padding: 2vh 0 6vh 0;
  }
}

.quicknav {
  position: absolute;
  bottom: 0;
  width: 80vw;
  display: flex;
  justify-content: space-between;
  padding-bottom: 9vh;
  font-size: 4.62vw;
  visibility: hidden;

  a, a:active, a:visited {
    text-decoration: none;
    color: $primary-color-light;
    transition: color 0.2s linear;
  }

  a:hover {
    cursor: pointer;
    color: lighten($primary-color-light, 10%);
    transition: color 0s;
  }
}

/* Typography styles */

.font-default {
  font-weight: 400;
  color: $primary-color-text;
  font-family: 'Oswald', 'Trebuchet MS', 'Verdana', 'Arial', sans-serif;
}

h1 {
  padding-bottom: 2vh;
  font-weight: 700;
  font-size: 15vw;
  letter-spacing: 1px;
  line-height: 1.1em;
  text-transform: uppercase;
  opacity: 0.8;
}

h2 {
  padding: 1.5vh 0;
  font-size: 4.62vw;
  line-height: 1.1em;
}

p {
  font-size: 4.69vw;
  line-height: 1.3em;
}

p + p {
  padding-top: 1em;
}

/* Media queries */

@import 'queries';

